--- a/android/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/android/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -7,6 +7,11 @@
         android:title="@string/title_groups" />
 
     <item
+        android:id="@+id/navigation_courts"
+        android:icon="@drawable/ic_courts"
+        android:title="@string/title_courts" />
+
+    <item
         android:id="@+id/navigation_schedules"
         android:icon="@drawable/ic_schedules"
         android:title="@string/title_schedules" />
