--- a/android/app/src/main/res/layout/app_bar_main.xml
+++ b/android/app/src/main/res/layout/app_bar_main.xml
@@ -2,7 +2,8 @@
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -28,7 +29,7 @@
                 android:id="@+id/toolbar_subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/toolbar_title"
+                android:layout_below="@+id/toolbar_title"
                 android:layout_centerHorizontal="true"
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
