--- a/android/app/src/main/res/layout/fragment_groups.xml
+++ b/android/app/src/main/res/layout/fragment_groups.xml
@@ -7,12 +7,19 @@
     android:background="@android:color/transparent"
     tools:context=".GroupsFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/groups_recycler_view"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingBottom="88dp"/>
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/groups_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="88dp"/>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_group"
