--- a/android/app/src/main/res/layout/fragment_schedules.xml
+++ b/android/app/src/main/res/layout/fragment_schedules.xml
@@ -7,6 +7,17 @@
     android:background="@android:color/transparent"
     tools:context=".SchedulesFragment">
 
+    <ImageView
+        android:id="@+id/background_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tennis_court"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/schedules_recycler_view"
         android:layout_width="match_parent"
