--- a/android/app/src/main/res/layout/item_schedule_stat_row.xml
+++ b/android/app/src/main/res/layout/item_schedule_stat_row.xml
@@ -3,41 +3,38 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/player_name_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        android:layout_weight="1"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/availability_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/times_played_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/times_on_bench_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
-
-    <TextView
-        android:id="@+id/last_played_text_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        android:gravity="center" />
 
 </LinearLayout>
