--- a/android/app/src/main/res/layout/item_group.xml
+++ b/android/app/src/main/res/layout/item_group.xml
@@ -38,6 +38,14 @@
                 android:src="@drawable/ic_edit" />
 
             <ImageButton
+                android:id="@+id/share_group_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:src="@android:drawable/ic_menu_share"
+                android:contentDescription="Share Group" />
+
+            <ImageButton
                 android:id="@+id/delete_group_button"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
