--- a/android/app/src/main/res/layout/activity_home.xml
+++ b/android/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/tennis_court"
-    tools:context=".HomeActivity">
+    tools:context="com.ramjin.mytennisteam.HomeActivity">
 
     <View
         android:layout_width="match_parent"
