--- a/android/app/src/main/res/layout/fragment_groups.xml
+++ b/android/app/src/main/res/layout/fragment_groups.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    tools:context=".GroupsFragment">
+    tools:context="com.ramjin.mytennisteam.GroupsFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh_layout"
