--- a/android/app/src/main/res/layout/fragment_players.xml
+++ b/android/app/src/main/res/layout/fragment_players.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    tools:context=".PlayersFragment">
+    tools:context="com.ramjin.mytennisteam.PlayersFragment">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/player_search_view"
