--- a/android/app/src/main/res/layout/item_schedule.xml
+++ b/android/app/src/main/res/layout/item_schedule.xml
@@ -54,10 +54,10 @@
             android:layout_marginBottom="16dp"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
             android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@+id/schedule_name_text_view"
+            app:layout_constraintTop_toBottomOf="@id/schedule_name_text_view"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_background"
+            app:layout_constraintBottom_toTopOf="@id/bottom_background"
             tools:text="Friday 09:00" />
 
         <com.google.android.material.card.MaterialCardView
@@ -68,8 +68,8 @@
             app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app.layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/bottom_background">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/bottom_background">
 
             <LinearLayout
                 android:layout_width="wrap_content"
