Add support contact model

--- a/android/app/src/main/res/menu/home_toolbar_menu.xml
+++ b/android/app/src/main/res/menu/home_toolbar_menu.xml
@@ -6,4 +6,9 @@
         android:id="@+id/action_delete_account"
         android:title="Delete Account"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_contact_support"
+        android:title="Contact Support"
+        app:showAsAction="never" />
 </menu>
